[metadata]
name = pdfsyntax
version = 0.0.2
author = Martin D.
author_email = desgeeko@gmail.com
description = Tool to generate a static HTML file that represents the internal structure of a PDF file
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/desgeeko/pdfsyntax
project_urls =
    Bug Tracker = https://github.com/desgeeko/pdfsyntax/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    
[options]
packages = pdfsyntax
python_requires = >=3.8

